--- a/odoo-bringout-oca-storage-storage_backend_sftp/storage_backend_sftp/i18n/bs.po
+++ b/odoo-bringout-oca-storage-storage_backend_sftp/storage_backend_sftp/i18n/bs.po
@@ -29,6 +29,8 @@ msgid ""
 "It's recommended to not store the key here but to provide it via secret env "
 "variable. See `server_environment` docs."
 msgstr ""
+"Preporuča se ne čuvati ključ ovdje već ga omogućiti putem tajne okruženjske "
+"varijable. Pogledajte dokumentaciju `server_environment`."
 
 #. module: storage_backend_sftp
 #: model:ir.model.fields,help:storage_backend_sftp.field_storage_backend__sftp_login
@@ -47,7 +49,6 @@ msgstr "Privatni ključ"
 
 #. module: storage_backend_sftp
 #: model:ir.model.fields.selection,name:storage_backend_sftp.selection__storage_backend__backend_type__sftp
-#: model_terms:ir.ui.view,arch_db:storage_backend_sftp.storage_backend_view_form
 msgid "SFTP"
 msgstr "SFTP"
 
@@ -69,12 +70,12 @@ msgstr "SFTP prijava"
 #. module: storage_backend_sftp
 #: model:ir.model.fields,field_description:storage_backend_sftp.field_storage_backend__sftp_password
 msgid "SFTP Password"
-msgstr "SFTP Password"
+msgstr "SFTP lozinka"
 
 #. module: storage_backend_sftp
 #: model:ir.model.fields,field_description:storage_backend_sftp.field_storage_backend__sftp_port
 msgid "SFTP Port"
-msgstr "SFTP Port"
+msgstr "SFTP port"
 
 #. module: storage_backend_sftp
 #: model:ir.model.fields,field_description:storage_backend_sftp.field_storage_backend__sftp_ssh_private_key
